# gd-mods

./: .gitmodules  CMakeLists.txt  README.md
src/: reset-after-percentage.cpp
